// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon icon gitHubSvg 1`] = `
<svg
  className="mini-icon"
>
  <use
    xlinkHref="#gitHubSvg"
  />
</svg>
`;

exports[`icon icon reactSvg 1`] = `
<svg
  className="mini-icon"
>
  <use
    xlinkHref="#reactSvg"
  />
</svg>
`;

exports[`icon icon webpackSvg 1`] = `
<svg
  className="mini-icon"
>
  <use
    xlinkHref="#webpackSvg"
  />
</svg>
`;

exports[`icon icons onClick 1`] = `2`;
